--- a/css/main.scss
+++ b/css/main.scss
@@ -1,53 +1,49 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
----
-@charset "utf-8";
 
-
-
-// Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
-
-$spacing-unit:     30px;
-
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
-// Width of the content area
-$content-width:    800px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
-
-
-
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+body {
+  background-color: #FFF;
+  margin: 0;
+  padding: 0;
 }
 
+.header {
+  background-image: url("http://www.download-hd-wallpapers.com/wp-content/uploads/2014/08/travel-around-the-world.jpg");
+  background-position: center center;
+  background-size: cover;
+  height: 775px;
+  width: 100%;
+}
 
+/* Add the ID selector to this CSS rule */
 
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+#header-text {
+  margin: 0 auto;
+  position: relative;
+  text-align: center;
+  top: 25%;
+  width: 60%;
+}
+
+h1 {
+  color: #FFF;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 70px;
+  font-weight: 800;
+  color: rgb(123,39,133);
+  line-height: 60px;
+  margin: 0;
+  position: relative;
+  bottom: 160px;
+}
+
+h2 {
+  color: #FFF;
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
+  font-size: 70px;
+  font-weight: 1500;
+  color: rgb(123,39,133);
+  position: relative;
+  bottom: 200px;
+}
+
